feat: 프로젝트 기술 스택 및 본인 역할 필드 추가